[package]
name = "regy_bot"
version = "1.16.8"
edition = "2021"

[dependencies]
poise = "0.5.7"
tokio = { version = "1.33.0", features = ["full"] }
regex = "1.10.2"
serde = { version = "1.0.191", features = ["derive"] }
toml  = { version = "0.8.7", optional = true }
base64 = "0.21.5"
uuid = { version = "1.5.0", features = ["v4", "serde", "fast-rng"] }
owo-colors = "3.5.0"
scorched = "0.3.0"
ron = "0.8.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
fuzzy-matcher = "0.3.7"
rand = "0.8.5"
futures = "0.3.29"
md5 = "0.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
self-replace = "1.3.7"

[features]
toml-updating = ["toml"]
developer-commands = []
test-deploy = []
legacy-staff = []

default = ["developer-commands"]

[[bin]]
name = "regy_bot"
path = "src/main.rs"

[[bin]]
name = "regy_bot_update_helper"
path = "src/update_helper.rs"
