[package]
name = "regy_bot"
version = "1.18.2"
edition = "2021"
default-run = "regy_bot"

[dependencies]
poise = "0.5.7"
tokio = { version = "1.35.1", features = ["full"] }
regex = "1.10.2"
serde = { version = "1.0.203", features = ["derive"] }
toml  = { version = "0.8.8", optional = true }
base64 = "0.21.5"
uuid = { version = "1.6.1", features = ["v4", "serde", "fast-rng"] }
scorched = "0.4.5"
ron = "0.8.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
fuzzy-matcher = "0.3.7"
rand = "0.8.5"
md5 = "0.7.0"
screenshots = { version = "0.8.6", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
self-replace = "1.3.7"

[features]
toml-updating = ["toml"]
developer-commands = []
test-deploy = []
legacy-staff = []
screen-capture = ["screenshots"]

default = ["developer-commands", "screen-capture"]

[[bin]]
name = "regy_bot"
path = "src/main.rs"

[[bin]]
name = "regy_bot_update_helper"
path = "src/update_helper.rs"
