[package]
name = "regy_bot"
version = "1.18.2"
edition = "2021"
default-run = "regy_bot"

[dependencies]
poise = "0.5.7"
tokio = { version = "1.36.0", features = ["full"] }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
toml  = { version = "0.8.10", optional = true }
base64 = "0.22.0"
uuid = { version = "1.7.0", features = ["v4", "serde", "fast-rng"] }
scorched = "0.5.2"
ron = "0.8.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
fuzzy-matcher = "0.3.7"
rand = "0.9.1"
md5 = "0.7.0"
screenshots = { version = "<0.8.10", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
self-replace = "1.3.7"

[features]
toml-updating = ["toml"]
developer-commands = []
test-deploy = []
legacy-staff = []
screen-capture = ["screenshots"]

default = ["developer-commands", "screen-capture"]

[[bin]]
name = "regy_bot"
path = "src/main.rs"

[[bin]]
name = "regy_bot_update_helper"
path = "src/update_helper.rs"
